# klyde

./: .gitignore  AGENTS.md  AGENTS.md.txt  CHANGELOG.md  LICENSE  README.md  pyproject.toml  session-ses_2279.md
.github/workflows/: ci.yml  release.yml
.keel/: memory.db
docs/CLAUDE/: BUILDPLAN.md  CONTEXT.md  ENGINEERING_RULES.md  PROMPTING_TEMPLATE.md  TASKS.md
hooks/: post-commit.sh  pre-commit.sh
keel/: cli.py  db.py
klyd/: __init__.py  cli.py  config.py  db.py  extractor.py  hooks.py  injector.py  logger.py
klyde/: __init__.py  cli.py  config.py  db.py  extractor.py  hooks.py  injector.py
schema/: v1.sql
