[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klyde"
version = "0.1.0"
description = "A CLI tool that wraps coding agents via git hooks to inject architectural memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "anthropic"
]

[tool.setuptools.packages.find]
include = ["klyde", "klyde.*"]

[project.scripts]
kl = "klyde.cli:cli"
